--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./scss/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <title>Tech Template</title>
+    <title>Fashion Blog Template</title>
 </head>
 <body>
     <!-- ALL CODE AND DESIGN BY GRACE BIRNAM <a href="https://grxcelyn.com/">Grxcelyn.com</a> -->
@@ -42,10 +39,49 @@
     
     </nav> <!-- END OF NAVBAR SECTION-->
 
- <!-- IMG CREDS -->
+    <div class="banner">
+        <div class="banner-container">
+            <img src="imgs/samanta-santy-RtB4cIBVUjQ-unsplash.jpg" alt="girl walking in a dark forest">
+            <!-- Photo by <a href="https://unsplash.com/@samatasanty?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">SAMANTA SANTY</a> on <a href="https://unsplash.com/s/photos/alice-in-wonderland?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+            <!-- <div class="triangle"></div> -->
+        </div>
+    </div>
+    <div class="blue">
+        <div class="triangle"></div>
+    </div>
+    <div class="rabbithole">
+        <h2>Testing layout</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure eius itaque odit eum minus eligendi rerum beatae impedit libero omnis, totam fuga praesentium temporibus atque quasi eos aliquid nisi maxime.
+        </p>
+        <!-- <img src="imgs/vera-gorbunova-RYIgYuwFTrA-unsplash.jpg" alt=""> -->
+        <!-- Photo by <a href="https://unsplash.com/ko/@veragorbunova?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Vera Gorbunova</a> on <a href="https://unsplash.com/collections/12129659/alice-in-wonderland-inspired-?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+    </div>
 
- <!-- yellow -->
- <!-- Photo by <a href="https://unsplash.com/@domjewel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dom Hill</a> on <a href="https://unsplash.com/s/photos/fashion?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+    <div class="falling">
+        <div class="fall one">
+            <h2>Title</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus cum est eos placeat totam cupiditate, odio rem ratione et error consectetur praesentium. Quae provident repudiandae similique nihil, possimus illum! Tenetur.
+            </p>
+        </div>
+
+        <div class="fall two">
+            <img src="/imgs/alice-alinari-MS371wlcGPo-unsplash.jpg" alt="">
+        </div>
+
+        <div class="fall three">
+            <h2>Title</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus cum est eos placeat totam cupiditate, odio rem ratione et error consectetur praesentium. Quae provident repudiandae similique nihil, possimus illum! Tenetur.
+            </p>
+        </div>
+    </div>
+
+<!-- IMG CREDS -->
+
+<!-- yellow -->
+<!-- Photo by <a href="https://unsplash.com/@domjewel?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Dom Hill</a> on <a href="https://unsplash.com/s/photos/fashion?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
 
 <!-- pink dress -->
 <!-- Photo by <a href="https://unsplash.com/@luobulinka?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">邱 严</a> on <a href="https://unsplash.com/s/photos/fashion?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
@@ -65,5 +101,17 @@
 <!-- drama -->
 <!-- Photo by <a href="https://unsplash.com/@calicadoo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">calicadoo</a> on <a href="https://unsplash.com/s/photos/fashion?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
 
+<!-- weird makeup -->
+<!-- Photo by <a href="https://unsplash.com/@dezjeff?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeff Frenette</a> on <a href="https://unsplash.com/s/photos/bold-colors?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
 
-  
+<!-- redvine drink  -->
+<!-- Photo by <a href="https://unsplash.com/@mroz?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Filip Mroz</a> on <a href="https://unsplash.com/s/photos/bold-colors?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+
+<!-- falling alice -->
+<!-- Photo by <a href="https://unsplash.com/@alicealinari?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Alice Alinari</a> on <a href="https://unsplash.com/s/photos/abstract-fashion?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+
+<!-- eat me cookies -->
+<!-- Photo by <a href="https://unsplash.com/ko/@jd_photo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">J-Photos</a> on <a href="https://unsplash.com/s/photos/alice-in-wonderland?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
+
+<!-- forest wondering -->
+<!-- Photo by <a href="https://unsplash.com/@samatasanty?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">SAMANTA SANTY</a> on <a href="https://unsplash.com/s/photos/alice-in-wonderland?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a> -->
